# catapult

./: LICENSE  MANIFEST.in  README.md  Readme.md  build.sh  pyproject.toml  requirements.txt  setup.py
catapult/: __init__.py  config.py  launch.py
catapult/base_images/: python.Dockerfile
catapult/compose_files/: cpp.yaml  deeplearning.yaml  python.yaml
catapult/templates/cpp/src/: main.cpp
catapult/templates/python/src/: index.py
catapultt/: __init__.py  launch.py
catapultt/base_images/: cpp.Dockerfile  deeplearning.Dockerfile  node.Dockerfile
catapultt/compose_files/: node.yaml
catapultt/config/: config.yaml
catapultt/templates/cpp/: CMakeLists.txt
catapultt/templates/deeplearning/src/: train.py
catapultt/templates/node/: package.json
catapultt/templates/node/src/: index.js
txtedit/: CMakeLists.txt  Dockerfile  compose.yml  main.cpp
txtedit/include/: terminalProps.hpp
txtedit/src/: terminalProps.cpp
