[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catapult"
version = "0.1.0"
description = "A tool for quickly setting up Docker development environments"
readme = "README.md"
authors = [
    {name = "Anubhav Tiwari", email = "abt.exp@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.7"
dependencies = [
    "questionary>=1.10.0",
    "rich>=12.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/abtExp/catapult"
Issues = "https://github.com/abtExp/catapult/issues"
Documentation = "https://github.com/abtExp/catapult#readme"

[project.scripts]
catapult = "catapult.launch:main"

[tool.setuptools]
packages = ["catapult"]

[tool.setuptools.package-data]
"catapult.config" = ["*.yaml"]
"catapult.base_images" = ["*.Dockerfile"]
"catapult.compose_files" = ["*.yaml"]
"catapult.templates" = ["*.*"]