[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catapultt"
version = "0.1.1"
description = "A tool for quickly setting up Docker development environments"
readme = "README.md"
authors = [
    {name = "Anubhav Tiwari", email = "abt.exp@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.7"
dependencies = [
    "questionary>=1.10.0",
    "rich>=12.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/abtExp/catapult"
Issues = "https://github.com/abtExp/catapult/issues"
Documentation = "https://github.com/abtExp/catapult#readme"

[project.scripts]
catapultt = "catapultt.launch:main"

[tool.setuptools]
packages = ["catapultt"]

[tool.setuptools.package-data]
"catapultt.config" = ["*.yaml"]
"catapultt.base_images" = ["*.Dockerfile"]
"catapultt.compose_files" = ["*.yaml"]
"catapultt.templates" = ["**/*"]